--- a/HTML/css/common.css
+++ b/HTML/css/common.css
@@ -14,7 +14,7 @@
 html {
     scroll-behavior: smooth;
     width: 100vw;
-    font-family: "Roboto", 'Arial', 'Yu Gothic', 'Yu Gothic UI', 'MS ゴシック', sans-serif;
+    font-family: sans-serif;
 }
 
 @media (max-width: 1440px) {
@@ -47,7 +47,8 @@ section {
     /* max-width: 1029px; */
     margin: 0 auto;
 }
-@media (min-width: 1210px){
+
+@media (min-width: 1210px) {
     .sm-container {
         width: 55.55vw;
         max-width: 800px;
@@ -61,7 +62,7 @@ img {
 }
 
 p {
-    font-family: "Roboto";
+    font-family: sans-serif;
 }
 
 a {
@@ -91,7 +92,7 @@ a:active {
 
 .section-title {
     width: 50%;
-    font-size: 8rem;
+    font-size: 7.5rem;
     font-weight: 700;
     letter-spacing: 6px;
 }
@@ -241,7 +242,7 @@ a:active {
     color: #fff;
 }
 
-span.red{
+span.red {
     color: red;
     vertical-align: super;
     font-size: 12px;
@@ -269,7 +270,7 @@ span.red{
         transform: translateY(-10px)
     }
 
-    .more-btn{
+    .more-btn {
         justify-content: flex-start;
     }
 
