--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -174,8 +174,8 @@ main {
     font-weight: 700;
     position: absolute;
     bottom: 0;
-    transform: translateY(50%);
-    font-size: 108px;
+    transform: translateY(66.6%);
+    font-size: 8rem;
     color: var(--main-color);
 }
 
@@ -226,7 +226,7 @@ main {
 .strengths-item .item-img {
     width: 100%;
     aspect-ratio: 1 / 1;
-    max-height: 300px;
+    /* max-height: 300px; */
     background-color: var(--icon-bg);
     transform: skew(-10deg);
     border-radius: 15px;
