[ADD]: fadeIn effect in sections (HTML)

--- a/HTML/css/common.css
+++ b/HTML/css/common.css
@@ -32,8 +32,17 @@ body {
 }
 
 section {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    will-change: opacity, transform;
     width: 100vw;
     /* max-width: 1440px; */
+}
+
+section.visible {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .container-fluid {
@@ -265,7 +274,7 @@ span.red {
         display: flex !important;
     }
 
-    .section-title{
+    .section-title {
         font-size: 15rem;
     }
 
