--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -246,8 +246,8 @@ main {
     position: absolute;
     top: 3%;
     left: 5%;
-    font-size: 24px;
-    font-weight: 900;
+    font-size: 3rem;
+    font-weight: 600;
     color: var(--text-color);
 }
 
