--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -13,8 +13,8 @@ header {
 
 .logo.header {
     /* Style for the logo */
-    background: url("../img/site-logo.png") no-repeat;
-    background-size: 254px;
+    background: url("../img/site-logo.png") no-repeat no-repeat center/contain;
+    /* background-size: 254px; */
     width: 254px;
     height: 72px;
     margin-left: 24px;
@@ -122,7 +122,7 @@ header {
 main {
     width: 100%;
     /* max-width: 1440px; */
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .top {
@@ -200,7 +200,7 @@ main {
 }
 
 .about .section-title .description {
-    transform: translate(-6px, -17px);
+    transform: translate(-2%, -50%);
 }
 
 .about-content {
@@ -425,6 +425,7 @@ main {
     width: 100%;
     aspect-ratio: 3/2;
     border-radius: 20px;
+    overflow: hidden;
 }
 
 /* LIVERS */
@@ -770,9 +771,8 @@ section.contact {
 
 .company-main table tr td {
     padding: 30px 0;
-    font-weight: 600;
-
-}
+    font-size: 18px;
+    letter-spacing: 1px;}
 
 .company-main table tr td:nth-of-type(1) {
     width: 200px;
@@ -791,6 +791,10 @@ section.contact {
     padding-top: 0;
     line-height: 80px;
     border-bottom: 1px solid #000;
+}
+
+iframe{
+    width: calc(71.5vw - 200px);
 }
 
 /* --------------------------------------------------- */
@@ -921,7 +925,7 @@ form .more-btn button {
     width: 50%;
 }
 
-.more-btn:hover input#submit {
+.more-btn a:hover input#submit {
     color: var(--bg-color);
     cursor: pointer;
     transition: all .35s;
