--- a/HTML/css/sp.css
+++ b/HTML/css/sp.css
@@ -413,8 +413,9 @@
     }
 
     .company-main table tr td {
-        font-size: 28px;
-        letter-spacing: 4px;
+        font-size: 3.36rem;
+        letter-spacing: 0.48rem;
+        padding: 3.6rem 0;
     }
 
     .company-main table tr td:nth-of-type(1),
