--- a/custom/css/sp.css
+++ b/custom/css/sp.css
@@ -105,7 +105,7 @@
     .top {
         height: 144vw;
         max-height: unset;
-        background: url("../img/mv-sp.png") no-repeat;
+        background: url("../img/mv-sp.webp") no-repeat;
         background-size: 100%;
     }
 
@@ -222,15 +222,15 @@
     }
 
     .support-item:nth-of-type(1) {
-        background: url("../img/support_bg01_sp.png") no-repeat left/cover;
+        background: url("../img/support_bg01_sp.webp") no-repeat left/cover;
     }
 
     .support-item:nth-of-type(2) {
-        background: url("../img/support_bg02_sp.png") no-repeat left/cover;
+        background: url("../img/support_bg02_sp.webp") no-repeat left/cover;
     }
 
     .support-item:nth-of-type(3) {
-        background: url("../img/support_bg03_sp.png") no-repeat left/cover;
+        background: url("../img/support_bg03_sp.webp") no-repeat left/cover;
     }
 
 
@@ -404,7 +404,7 @@
     /* -------------- C O M P A N Y ---------------------- */
     /* --------------------------------------------------- */
     #company-top {
-        background: url(../img/company-top-sp.png) no-repeat center/cover;
+        background: url(../img/company-top-sp.webp) no-repeat center/cover;
     }
 
     .company-main table tr {
@@ -413,8 +413,9 @@
     }
 
     .company-main table tr td {
-        font-size: 28px;
-        letter-spacing: 4px;
+        font-size: 3.36rem;
+        letter-spacing: 0.48rem;
+        padding: 3.6rem 0;
     }
 
     .company-main table tr td:nth-of-type(1),
@@ -449,7 +450,7 @@
     /* --------------------------------------------------- */
 
     #contact-top {
-        background: url(../img/contact-top-sp.png) no-repeat center/cover;
+        background: url(../img/contact-top-sp.webp) no-repeat center/cover;
         height: 90.8vw;
     }
 
@@ -466,7 +467,7 @@
     /* --------------------------------------------------- */
 
     #liver-top {
-        background: url(../img/liver-top-sp.png) no-repeat center/cover;
+        background: url(../img/liver-top-sp.webp) no-repeat center/cover;
         height: 90.8vw;
     }
 }
