--- a/HTML/css/sp.css
+++ b/HTML/css/sp.css
@@ -391,13 +391,18 @@
     .footer {
         flex-direction: column;
         align-items: center;
-        gap: 50px;
+        gap: 18rem;
+    }
+
+    .footer-logo {
+        width: 46.2rem;
     }
 
     .footer-nav {
-        font-size: 32px;
+        font-size: 5.52rem;
         flex-direction: column;
         padding: unset;
+        gap: 18rem;
     }
 
     /* --------------------------------------------------- */
@@ -460,6 +465,32 @@
 
     .contact-step .content p:nth-of-type(2) {
         font-size: 2.4rem;
+    }
+
+    .step-diagram p {
+        font-weight: 400;
+        font-size: 1.92rem;
+    }
+
+    .step-diagram span.arrow {
+        width: 4.8rem;
+    }
+
+    .step-diagram span.arrow::after {
+        width: 1.8rem;
+    }
+
+    form {
+        font-size: 2.64rem;
+    }
+
+    form label {
+        margin-top: 35px;
+        font-size: 2.64rem;
+    }
+
+    form input {
+        font-size: 2.16rem;
     }
 
     /* --------------------------------------------------- */
