--- a/custom/css/sp.css
+++ b/custom/css/sp.css
@@ -105,7 +105,7 @@
     .top {
         height: 144vw;
         max-height: unset;
-        background: url("../img/mv-sp.webp") no-repeat;
+        background: url("../img/mv-sp.png") no-repeat;
         background-size: 100%;
     }
 
@@ -222,15 +222,15 @@
     }
 
     .support-item:nth-of-type(1) {
-        background: url("../img/support_bg01_sp.webp") no-repeat left/cover;
+        background: url("../img/support_bg01_sp.png") no-repeat left/cover;
     }
 
     .support-item:nth-of-type(2) {
-        background: url("../img/support_bg02_sp.webp") no-repeat left/cover;
+        background: url("../img/support_bg02_sp.png") no-repeat left/cover;
     }
 
     .support-item:nth-of-type(3) {
-        background: url("../img/support_bg03_sp.webp") no-repeat left/cover;
+        background: url("../img/support_bg03_sp.png") no-repeat left/cover;
     }
 
 
@@ -391,20 +391,29 @@
     .footer {
         flex-direction: column;
         align-items: center;
-        gap: 50px;
+        gap: 18rem;
+    }
+
+    .footer-logo {
+        width: 46.2rem;
     }
 
     .footer-nav {
-        font-size: 32px;
+        font-size: 5.52rem;
         flex-direction: column;
         padding: unset;
+        gap: 18rem;
     }
 
     /* --------------------------------------------------- */
     /* -------------- C O M P A N Y ---------------------- */
     /* --------------------------------------------------- */
     #company-top {
-        background: url(../img/company-top-sp.webp) no-repeat center/cover;
+        background: url(../img/company-top-sp.png) no-repeat center/cover;
+    }
+
+    .company-main {
+        margin-top: 50px;
     }
 
     .company-main table tr {
@@ -450,7 +459,7 @@
     /* --------------------------------------------------- */
 
     #contact-top {
-        background: url(../img/contact-top-sp.webp) no-repeat center/cover;
+        background: url(../img/contact-top-sp.png) no-repeat center/cover;
         height: 90.8vw;
     }
 
@@ -462,12 +471,38 @@
         font-size: 2.4rem;
     }
 
+    .step-diagram p {
+        font-weight: 400;
+        font-size: 1.92rem;
+    }
+
+    .step-diagram span.arrow {
+        width: 4.8rem;
+    }
+
+    .step-diagram span.arrow::after {
+        width: 1.8rem;
+    }
+
+    form {
+        font-size: 2.64rem;
+    }
+
+    form label {
+        margin-top: 35px;
+        font-size: 2.64rem;
+    }
+
+    form input {
+        font-size: 2.16rem;
+    }
+
     /* --------------------------------------------------- */
     /* ------------------ L I V E R ---------------------- */
     /* --------------------------------------------------- */
 
     #liver-top {
-        background: url(../img/liver-top-sp.webp) no-repeat center/cover;
+        background: url(../img/liver-top-sp.png) no-repeat center/cover;
         height: 90.8vw;
     }
 }
